test/classes/dinan/circular_init_unbroken.good
circular_init_unbroken.chpl:2: error: 'b' used before defined (first used here)
